# Forge

./: .env.example  .gitignore  AGENT_STRATEGY.md  Dockerfile.demo  README.md  SYSTEM_DESIGN.md  UNICORN_ARCHITECTURE.md  docker-compose.yml  pyproject.toml
ai_dev_agency/codefusionai/: Dockerfile  README.md  api_server.py  blueprint.json  docker-compose.yml  main.py  requirements.txt
docs/: api.md  competitor_research.md  exhaustive_test_strategy.md  five_features.md  level3_plus_vision.md  research_hands.md  unicorn_playbook.md
examples/: demo_domain.txt  demo_saas_support.py  tool_backends.json  verify_forge.py
forge/: __init__.py  cli.py  config.py
forge/core/: critic.py  (+9 more)
scripts/: e2e_demo.py  run_demo.ps1  run_demo.sh  setup.sh
tests/: conftest.py  test_ab_testing.py  test_agency.py  test_agent.py  test_agent_spawner.py  test_build_loop.py  test_confidence.py  test_domain_analyzer.py  test_e2e_generation.py  test_engine.py  test_escalation.py  test_execution_strategy.py  test_full_pipeline.py  test_generated_error_cases.py  test_generated_execution.py  test_guardrails.py  test_human.py  test_integration_llm.py  test_integration_tools.py  test_integrations.py  test_knowledge.py  test_memory.py  test_model_router.py  test_observability.py  test_orchestrator.py  test_persistence.py  test_phase_gates.py  test_planner.py  test_quality.py  test_rate_limiter.py  test_router.py  test_scheduler.py  test_self_evolution.py  test_semantic_budget.py  test_sql_tool.py  test_streaming.py  test_stress_lab.py  test_structured_outputs.py  test_team.py  test_token_manager.py  (+3 more)
(+261 files in other folders)
